--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,14 +11,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install required packages
+      run: brew install shellcheck
+
     - name: Check init.sh
       run: shellcheck ${GITHUB_WORKSPACE}/init.sh
 
     - name: Check .zshenv
       run: shellcheck ${GITHUB_WORKSPACE}/.zshenv --exclude=SC2148,SC1090
 
-    - name: Check .bash_profile
+    - name: Check .zprofile
       run: shellcheck ${GITHUB_WORKSPACE}/.zprofile --exclude=SC2148,SC1090
 
-    - name: Check .bashrc
+    - name: Check .zshrc
       run: shellcheck ${GITHUB_WORKSPACE}/.zshrc --exclude=SC2148,SC1090
