実行コマンドの変更

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Run init.sh
-      run: ${GITHUB_WORKSPACE}/init.sh
+      run: . ${GITHUB_WORKSPACE}/init.sh
 
     - name: Load .zshenv
       run: |
