--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -11,21 +11,24 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Copy the directory
+      run: mkdir ${HOME}/dotfiles && cp ${GITHUB_WORKSPACE}/* ${HOME}/dotfiles/ 
+
     - name: Run init.sh
-      run: . ${GITHUB_WORKSPACE}/init.sh
+      run: . ${HOME}/dotfiles/init.sh
 
-    - name: Load .zshenv
-      run: |
-        zsh ~/.zshenv 2> error.log; cat error.log
-        if [ -s error.log ]; then false; fi
+    # - name: Load .zshenv
+    #   run: |
+    #     zsh ~/.zshenv 2> error.log; cat error.log
+    #     if [ -s error.log ]; then false; fi
 
-    - name: Load .zprofile
-      run: |
-        zsh ${ZDOTDIR}/.zprofile 2> error.log; cat error.log
-        if [ -s error.log ]; then false; fi
+    # - name: Load .zprofile
+    #   run: |
+    #     zsh ${ZDOTDIR}/.zprofile 2> error.log; cat error.log
+    #     if [ -s error.log ]; then false; fi
 
-    - name: Load .zshrc
-      run: |
-        zsh ${ZDOTDIR}/.zshrc 2> error.log; cat error.log
-        if [ -s error.log ]; then false; f
+    # - name: Load .zshrc
+    #   run: |
+    #     zsh ${ZDOTDIR}/.zshrc 2> error.log; cat error.log
+    #     if [ -s error.log ]; then false; f
     
