--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,5 @@
 !/.config/git/**
 !/git-subcommand
 !/git-subcommand/**
-!/.config/karabiner
-!/.config/karabiner/karabiner.json
+!/scripts
+!/scripts/**
