--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,4 +15,4 @@ jobs:
       run: brew install shellcheck
 
     - name: Check init.sh
-      run: shellcheck ${GITHUB_WORKSPACE}/init.sh
+      run: shellcheck ${GITHUB_WORKSPACE}/scripts/*
