--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,3 @@
-### all ignore ###
-/*
-/.**
-
-### not ignore ###
-!/.gitignore
-!/.editorconfig
-!/README.md
-!/LICENSE
-!/.zshenv
-!/.zprofile
-!/.zshrc
-!/init.sh
-!/.zsh
-!/.zsh/completion
-/.zsh/completion/**
-!/.zsh/rc
-!/.zsh/rc/fzf.zsh
-!/.nanorc
-!/.github
-!/.github/workflows
-!/.github/workflows/*
-!/.config
-!/.config/starship.toml
-!/.config/git
-!/.config/git/**
-!/git-subcommand
-!/git-subcommand/**
-!/scripts
-!/scripts/**
+.vscode/
+*.code-workspace
+.DS_Store
