--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -12,10 +12,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Copy the directory
-      run: mkdir ${HOME}/dotfiles && cp -r ${GITHUB_WORKSPACE}/ ${HOME}/dotfiles/ 
+      run: mkdir ${HOME}/dotfiles && cp -r ${GITHUB_WORKSPACE}/ ${HOME}/dotfiles/
 
     - name: Run init.sh
-      run: . ${HOME}/dotfiles/init.sh
+      run: make init
 
     # - name: Load .zshenv
     #   run: |
@@ -31,4 +31,3 @@ jobs:
     #   run: |
     #     zsh ${ZDOTDIR}/.zshrc 2> error.log; cat error.log
     #     if [ -s error.log ]; then false; f
-    
