--- a/.editorconfig
+++ b/.editorconfig
@@ -30,3 +30,11 @@ indent_size = 4
 [*.go]
 indent_style = tab
 indent_size = 4
+
+[*.{tex,bib}]
+indent_style = space
+indent_size = 2
+
+[*latexmkrc]
+indent_style = space
+indent_size = 2
