--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -17,6 +17,9 @@ jobs:
     - name: Run init.sh
       run: make init
 
+    - name: Setup macOS defaults config
+      run: make macos
+
     # - name: Load .zshenv
     #   run: |
     #     zsh ~/.zshenv 2> error.log; cat error.log
