--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -6,8 +6,11 @@ on:
 
 jobs:
   macos-test:
-    runs-on: macos-latest
+    strategy:
+      matrix:
+        os: [macos-10.15, macos-11, macos-12]
 
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
 
