--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,7 +15,10 @@ jobs:
       run: brew install shellcheck
 
     - name: Check Scripts
-      run: shellcheck ${GITHUB_WORKSPACE}/scripts/*
+      run: shellcheck ${GITHUB_WORKSPACE}/scripts/*.sh
+
+    - name: Check Temporary Scripts
+      run: shellcheck ${GITHUB_WORKSPACE}/scripts/tmp/*.sh
 
     - name: Check Git Subcommands
       run: shellcheck ${GITHUB_WORKSPACE}/.config/git/subcommand
