--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ trim_trailing_whitespace = false
 indent_style = space
 indent_size = 2
 
-[*.{js,ts,jsx,tsx,vue}]
+[*.{js,ts,gs,jsx,tsx,vue}]
 indent_style = space
 indent_size = 2
 
