--- a/.editorconfig
+++ b/.editorconfig
@@ -19,7 +19,7 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
-[*.json]
+[*.{json,jsonc,jsonnet}]
 indent_style = space
 indent_size = 2
 
