gitsubcommandのCIが通るように修正

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,4 +21,4 @@ jobs:
       run: shellcheck ${GITHUB_WORKSPACE}/scripts/tmp/*.sh
 
     - name: Check Git Subcommands
-      run: shellcheck ${GITHUB_WORKSPACE}/.config/git/subcommand
+      run: shellcheck ${GITHUB_WORKSPACE}/.config/git/subcommand/git-*
