--- a/.config/sheldon/plugins.toml
+++ b/.config/sheldon/plugins.toml
@@ -1,17 +1,6 @@
-# `sheldon` configuration file
-# ----------------------------
-#
-# You can modify this file directly or you can use one of the following
-# `sheldon` commands which are provided to assist in editing the config file:
-#
-# - `sheldon add` to add a new plugin to the config file
-# - `sheldon edit` to open up the config file in the default editor
-# - `sheldon remove` to remove a plugin from the config file
-#
-# See the documentation for more https://github.com/rossmacarthur/sheldon#readme
-
 shell = "zsh"
 
+### plugins
 [plugins]
 [plugins.zsh-autosuggestions]
 github = "zsh-users/zsh-autosuggestions"
@@ -30,3 +19,12 @@ github = "mollifier/cd-gitroot"
 
 [plugins.zsh-replace-multiple-dots]
 github = "momo-lab/zsh-replace-multiple-dots"
+
+### completions
+[plugins.delta-completions]
+apply = ["fpath"]
+remote = "https://raw.githubusercontent.com/dandavison/delta/master/etc/completion/completion.zsh"
+
+[plugins.task-completions]
+apply = ["fpath"]
+remote = "https://raw.githubusercontent.com/go-task/task/main/completion/zsh/_task"
