zshrcの設定を遅延読み込みに分割

--- a/.config/sheldon/plugins.toml
+++ b/.config/sheldon/plugins.toml
@@ -32,6 +32,16 @@ github = "mollifier/cd-gitroot"
 apply = ["defer"]
 github = "momo-lab/zsh-replace-multiple-dots"
 
+[plugins.local-defer]
+apply = ["defer"]
+local = "~/.config/zsh/plugins/defer"
+use = ["*.zsh"]
+
+[plugins.local-sync]
+apply = ["source"]
+local = "~/.config/zsh/plugins/sync"
+use = ["*.zsh"]
+
 ### completions
 [plugins.delta-completions]
 apply = ["fpath"]
