--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -2,16 +2,17 @@ name: macos
 on:
   push:
     branches: [main]
+env:
+  XDG_CONFIG_HOME: ${{ github.workspace }}/.config
 jobs:
   macos-test:
-    env:
-      XDG_CONFIG_HOME: ${{ github.workspace }}/.config
     strategy:
       matrix:
         os: [macos-11, macos-12, macos-13]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
+      - run: echo $XDG_CONFIG_HOME
       - name: Copy the directory
         run: mkdir ${HOME}/dotfiles && cp -r ${GITHUB_WORKSPACE}/ ${HOME}/dotfiles/
       - name: Run init.sh
