--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [main]
 env:
-  XDG_CONFIG_HOME: $HOME/.config
+  XDG_CONFIG_HOME: ~/.config
 jobs:
   macos-test:
     strategy:
