--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -2,8 +2,6 @@ name: macos
 on:
   push:
     branches: [main]
-env:
-  XDG_CONFIG_HOME: ~/.config
 jobs:
   macos-test:
     strategy:
@@ -16,7 +14,7 @@ jobs:
       - name: Copy the directory
         run: mkdir ${HOME}/dotfiles && cp -r ${GITHUB_WORKSPACE}/ ${HOME}/dotfiles/
       - name: Run init.sh
-        run: make init
+        run: export XDG_CONFIG_HOME=$HOME/.config && make init
       - name: Setup macOS defaults config
         run: make macos
 # - name: Load .zshenv
