sheldonのキャッシュ 10ms程度の高速化
❯ hyperfine -w 5 -r 50 -i 'zsh -i -c exit'
Benchmark 1: zsh -i -c exit
  Time (mean ± σ):     155.0 ms ±   3.9 ms    [User: 82.6 ms, System: 30.7 ms]
  Range (min … max):   144.9 ms … 164.7 ms    50 runs

--- a/Taskfile.dist.yml
+++ b/Taskfile.dist.yml
@@ -30,6 +30,7 @@ tasks:
   sheldon:
     cmds:
       - sheldon lock --reinstall
+      - sheldon source > ~/.cache/sheldon/source
     sources:
       - ./config/zsh/plugins/defer/*
       - ./config/zsh/plugins/sync/*
