--- a/config/sheldon/Taskfile.dist.yml
+++ b/config/sheldon/Taskfile.dist.yml
@@ -17,8 +17,9 @@ tasks:
     sources:
       - ./config/sheldon/plugins.toml
     cmds:
-      - sheldon source > $XDG_CACHE_HOME/sheldon/source
+      - echo "#!/usr/bin/env zsh" > $XDG_CACHE_HOME/sheldon/sheldon.zsh
+      - sheldon source >> $XDG_CACHE_HOME/sheldon/sheldon.zsh
   clean:
     desc: "sheldonのキャッシュを削除する"
     cmds:
-      - rm $XDG_CACHE_HOME/sheldon/source
+      - rm $XDG_CACHE_HOME/sheldon/sheldon.zsh
