fix: zenoのkeybind設定が読み込み完了に間に合わない問題の修正

--- a/config/sheldon/plugins.toml
+++ b/config/sheldon/plugins.toml
@@ -36,9 +36,12 @@ github = "momo-lab/zsh-replace-multiple-dots"
 apply = ["defer"]
 github = "yuki-yano/zeno.zsh"
 hooks.post = """
-if [[ -n $ZENO_LOADED ]]; then
-  bindkey ' '  zeno-auto-snippet
-fi
+__zeno_keybind() {
+  if [[ -n $ZENO_LOADED ]]; then
+    bindkey ' '  zeno-auto-snippet
+  fi
+}
+zsh-defer __zeno_keybind
 """
 
 [plugins.local-defer]
