feat: pipxの設定を追加

--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -1,4 +1,5 @@
 brew "bat"
+brew "fastfetch"
 brew "fd"
 brew "fzf"
 brew "git"
@@ -9,7 +10,7 @@ brew "lsd"
 brew "nano"
 brew "navi"
 brew "micro"
-brew "neofetch"
+brew "pipx"
 brew "ripgrep"
 brew "starship"
 brew "sheldon"
