--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -1,4 +1,5 @@
 brew "bat"
+brew "eza"
 brew "fastfetch"
 brew "fd"
 brew "fzf"
@@ -6,7 +7,6 @@ brew "git"
 brew "gibo"
 brew "git-delta"
 brew "go-task"
-brew "lsd"
 brew "nano"
 brew "navi"
 brew "micro"
