feat: brew installのスニペット追加

--- a/config/zeno/config.yml
+++ b/config/zeno/config.yml
@@ -98,6 +98,8 @@ snippets:
   - name: brew install
     keyword: i
     snippet: install {{package_name}}
+    context:
+      lbuffer: '^brew'
 
   - name: docker
     keyword: dc
