--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -9,9 +9,10 @@ brew "gibo"
 brew "git-delta"
 brew "glow"
 brew "go-task"
+brew "jesseduffield/lazygit/lazygit"
+brew "micro"
 brew "nano"
 brew "navi"
-brew "micro"
 brew "pipx"
 brew "ripgrep"
 brew "starship"
