--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -1,3 +1,4 @@
+tap "jesseduffield/lazygit"
 brew "atuin"
 brew "bat"
 brew "eza"
@@ -9,7 +10,7 @@ brew "gibo"
 brew "git-delta"
 brew "glow"
 brew "go-task"
-brew "jesseduffield/lazygit/lazygit"
+brew "lazygit"
 brew "micro"
 brew "nano"
 brew "navi"
