feat: CLIをmise管理に移行

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -9,3 +9,12 @@ python = "latest"
 "go:github.com/sheepla/pingu" = "latest"
 go = "latest"
 ghq = "latest"
+bat = "latest"
+ripgrep = "latest"
+zoxide = "latest"
+fzf = "latest"
+fd = "latest"
+starship = "latest"
+zellij = "latest"
+delta = "latest"
+lazygit = "latest"
