fix: 明示的なXDG_RUNTIME_DIRの指定の削除して

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -6,7 +6,6 @@ deno = "latest"
 node = "latest"
 python = "latest"
 "pipx:terminaltexteffects" = "latest"
-"go:github.com/sheepla/pingu" = "latest"
 go = "latest"
 ghq = "latest"
 bat = "latest"
@@ -18,3 +17,4 @@ starship = "latest"
 zellij = "latest"
 delta = "latest"
 lazygit = "latest"
+"go:github.com/go-task/task/v3/cmd/task" = "latest"
