--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,8 +1,9 @@
 font-family = "HackGen Console NF"
 macos-option-as-alt = "left"
-font-size = "16"
+font-size = "14"
 quick-terminal-position = center
 quick-terminal-animation-duration = 0
 keybind = global:alt+space=toggle_quick_terminal
 theme = "iceberg-dark"
 background-opacity = 0.9
+config-file = ?local.conf
