--- a/config/xremap/config.yaml
+++ b/config/xremap/config.yaml
@@ -5,10 +5,18 @@ modmap:
         held: KEY_LEFTSHIFT
         alone: Space
         alone_timeout_millis: 300
+  # - name: TerminalCapsLock
+  #   remap:
+  #     KEY_CAPSLOCK:
+  #       held: KEY_LEFTCTRL
+  #       alone: KEY_ESC
+  #       alone_timeout_millis: 300
+  #   application:
+  #     only: *terminals
   - name: CapsLock
     remap:
       KEY_CAPSLOCK:
-        held: KEY_LEFTCTRL
+        held: KEY_CAPSLOCK
         alone: KEY_ESC
         alone_timeout_millis: 300
   - name: IME and KeySwap
@@ -23,10 +31,44 @@ modmap:
         alone_timeout_millis: 300
       KEY_LEFTCTRL: KEY_LEFTMETA
       KEY_RIGHTCTRL: KEY_RIGHTMETA
-        
+
 virtual_modifiers:
   - CapsLock
 keymap:
   - name: Emacs Like Cursor Move
     remap:
-      CapsLock-j: Left
+      CapsLock-f: Left
+      CapsLock-b: Right
+      CapsLock-p: Up
+      CapsLock-n: Down
+      CapsLock-a: Home
+      CapsLock-e: End
+      # 残りはCapsLockをCtrlの操作に変換する
+      CapsLock-d: Ctrl-d
+      CapsLock-h: Ctrl-h
+      CapsLock-u: Ctrl-u
+      CapsLock-k: Ctrl-k
+      CapsLock-y: Ctrl-y
+      CapsLock-w: Ctrl-w
+      CapsLock-t: Ctrl-t
+      CapsLock-g: Ctrl-g
+      CapsLock-r: Ctrl-r
+      CapsLock-j: Ctrl-j
+      CapsLock-x: Ctrl-x
+      CapsLock-c: Ctrl-c
+      CapsLock-q: Ctrl-q
+      CapsLock-s: Ctrl-s
+
+  - name: 1password extension
+    remap:
+      CapsLock-Shift-x: M-Shift-x
+
+  - name: Terminal HotKey
+    remap:
+      M-Space: F12
+
+shared:
+  terminals: &terminals
+    - Yakuake
+    - Konsole
+    - Rio
