--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -18,3 +18,4 @@ zellij = "latest"
 delta = "latest"
 lazygit = "latest"
 "go:github.com/go-task/task/v3/cmd/task" = "latest"
+"ubi:tstack/lnav" = "latest"
