--- a/config/git/config
+++ b/config/git/config
@@ -46,3 +46,9 @@
 	autocrlf = input
 [ghq]
 	root = ~/src
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
