--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -3,6 +3,7 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 # bind = Ctrl, Return, exec, ghostty
 bind = Ctrl, Space, exec, wofi --show drun
 bind = SUPER CTRL, Q, exec, hyprlock
+bind = SUPER SHIFT, Q, exec, wlogout
 exec-once = fcitx5
 exec-once = hypridle
 monitor = DP-5, 3440x1440, 0x0, 1
