--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,8 +6,12 @@ bind = SUPER CTRL, Q, exec, hyprlock
 bind = SUPER SHIFT, Q, exec, wlogout
 exec-once = fcitx5
 exec-once = hypridle
+
+### モニターとか
 monitor = DP-5, 3440x1440, 0x0, 1
 monitor = DP-4, 2560x1440, 3440x-250, 1, transform, 1
+workspace = 1, monitor:DP-5, default:true
+workspace = 9, monitor:DP-4, default:true
 
 # example
 # This is an example Hyprland configq file.
