feat: hyprland, terminalホットキーの設定

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -13,6 +13,18 @@ monitor = DP-4, 2560x1440, 3440x-250, 1, transform, 1
 workspace = 1, monitor:DP-5, default:true
 workspace = 9, monitor:DP-4, default:true
 
+### ターミナルホットキー
+# titleにfloatを指定したghosttyのウィンドウを最初に起動して、それが $terminalWorkspace に表示されるようにする
+# TODO: titleではなくclassを指定できるようにしたい
+$terminalWorkspace = terminal
+bind = ALT, Space, togglespecialworkspace, $terminalWorkspace
+windowrulev2 = float,class:com.mitchellh.ghostty,title:float
+windowrulev2 = center,class:com.mitchellh.ghostty,title:float
+windowrulev2 = size 50% 65%,class:com.mitchellh.ghostty,title:float
+windowrulev2 = workspace special:$terminalWorkspace,class:com.mitchellh.ghostty,title:float
+exec-once = ghostty --background-opacity=0.8 --title=float && hyprctl dispatch tagwindow +float
+
+
 # example
 # This is an example Hyprland configq file.
 # Refer to the wiki for more information.
