--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -232,10 +232,14 @@ bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
 # ウィンドウの移動
-bind = $mainMod SHIFT, h, movewindow, l
-bind = $mainMod SHIFT, l, movewindow, r
-bind = $mainMod SHIFT, k, movewindow, u
-bind = $mainMod SHIFT, j, movewindow, d
+bind = $mainMod SHIFT, h, swapwindow, l
+bind = $mainMod SHIFT, k, swapwindow, u
+bind = $mainMod SHIFT, l, swapwindow, r
+bind = $mainMod SHIFT, j, swapwindow, d
+bind = $mainMod SHIFT, left, swapwindow, l
+bind = $mainMod SHIFT, right, swapwindow, r
+bind = $mainMod SHIFT, up, swapwindow, u
+bind = $mainMod SHIFT, down, swapwindow, d
 
 # フォーカスがあたったウィンドウのリサイズ
 bind = $mainMod, equal, resizeactive, 20 20
