feat: ウィンドウのセンタリング追加

--- a/config/xremap/config.yaml
+++ b/config/xremap/config.yaml
@@ -64,6 +64,9 @@ keymap:
   - name: 1password extension
     remap:
       CapsLock-Shift-x: M-Shift-x
+  - name: deepl extension
+    remap:
+      CapsLock-Shift-y: M-Shift-y
   - name: ScreenLock
     remap:
       CapsLock-Ctrl-q: Ctrl-Super-q
