--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -210,8 +210,9 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, Q, killactive,
+bind = $mainMod, C, togglefloating,
+bind = $mainMod, C, centerwindow,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
