fix: float terminalにモニター指定を追加

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -17,13 +17,13 @@ workspace = 9, monitor:DP-4, default:true
 # titleにfloatを指定したghosttyのウィンドウを最初に起動して、それが $terminalWorkspace に表示されるようにする
 # TODO: titleではなくclassを指定できるようにしたい
 $terminalWorkspace = terminal
-bind = ALT, Space, togglespecialworkspace, $terminalWorkspace
+workspace = $terminalWorkspace, monitor:DP-5
 windowrulev2 = float,class:com.mitchellh.ghostty,title:float
 windowrulev2 = center,class:com.mitchellh.ghostty,title:float
 windowrulev2 = size 50% 65%,class:com.mitchellh.ghostty,title:float
 windowrulev2 = workspace special:$terminalWorkspace,class:com.mitchellh.ghostty,title:float
-exec-once = ghostty --background-opacity=0.8 --title=float && hyprctl dispatch tagwindow +float
-
+bind = ALT, Space, togglespecialworkspace, $terminalWorkspace
+exec-once = ghostty --background-opacity=0.8 --title=float
 
 # example
 # This is an example Hyprland configq file.
