fix: workspace identifierのミスを修正

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,6 +6,7 @@ bind = SUPER CTRL, Q, exec, hyprlock
 bind = SUPER SHIFT, Q, exec, wlogout
 exec-once = fcitx5
 exec-once = hypridle
+exec-once = 1password --silent
 
 ### モニターとか
 monitor = DP-5, 3440x1440, 0x0, 1
@@ -17,7 +18,7 @@ workspace = 9, monitor:DP-4, default:true
 # titleにfloatを指定したghosttyのウィンドウを最初に起動して、それが $terminalWorkspace に表示されるようにする
 # TODO: titleではなくclassを指定できるようにしたい
 $terminalWorkspace = terminal
-workspace = $terminalWorkspace, monitor:DP-5
+workspace = special:$terminalWorkspace, monitor:DP-5
 windowrulev2 = float,class:com.mitchellh.ghostty,title:float
 windowrulev2 = center,class:com.mitchellh.ghostty,title:float
 windowrulev2 = size 50% 65%,class:com.mitchellh.ghostty,title:float
